--- a/HW 1.html
+++ b/HW 1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <HTML>
    <HEAD>
@@ -156,11 +155,11 @@ function parse() {
 						stack.push(c);
 					else
 					{
-						if (stack[stack.length-1] == '(')
+						if (stack[stack.length-1] == '(' || stack[stack.length-1] == '{' || stack[stack.length-1] == '[')
 							stack.push(c);
 						else
 						{
-							while (stack[stack.length-1] != '(')
+							while (stack[stack.length-1] != '(' && stack[stack.length-1] != '{' && stack[stack.length-1] != '[')
 							{
 								postf += stack[stack.length-1] + " ";
 								stack.pop();
@@ -186,11 +185,11 @@ function parse() {
 					stack.push(c);
 				else
 				{
-					if (stack[stack.length-1] == '(')
+					if (stack[stack.length-1] == '(' || stack[stack.length-1] == '{' || stack[stack.length-1] == '[')
 						stack.push(c);
 					else
 					{
-						while (stack[stack.length-1] != '(')
+						while (stack[stack.length-1] != '(' && stack[stack.length-1] != '{' && stack[stack.length-1] != '[')
 						{
 							postf += stack[stack.length-1] + " ";
 							stack.pop();
@@ -209,11 +208,11 @@ function parse() {
 					stack.push(c);
 				else
 				{
-					if (stack[stack.length-1] == '(' || stack[stack.length-1] == '+' || stack[stack.length-1] == '-')
+					if (stack[stack.length-1] == '(' || stack[stack.length-1] == '{' || stack[stack.length-1] == '[' || stack[stack.length-1] == '+' || stack[stack.length-1] == '-')
 						stack.push(c);
 					else
 					{
-						while (stack[stack.length-1] != '+' && stack[stack.length-1] != '-' && stack[stack.length-1] != '(')
+						while (stack[stack.length-1] != '+' && stack[stack.length-1] != '-' && stack[stack.length-1] != '(' && stack[stack.length-1] != '{' && stack[stack.length-1] != '[')
 						{
 							postf += stack[stack.length-1] + " ";
 							stack.pop();
@@ -255,7 +254,7 @@ function parse() {
 			{
 				if (str[i-1] != '(' && str[i-1] != '{' && str[i-1] != '[')
 				{
-					while (stack[stack.length-1] != '(' && str[i-1] != '{' && str[i-1] != '[')
+					while (stack[stack.length-1] != '(' && stack[stack.length-1] != '{' && stack[stack.length-1] != '[')
 					{
 						postf += stack[stack.length-1] + " ";
 						stack.pop();
